--- a/conf/application.conf
+++ b/conf/application.conf
@@ -24,6 +24,8 @@ db.default {
 # disable the built in filters
 play.http.filters = play.api.http.NoHttpFilters
 
+play.http.secret.key="http://playframework.com/documentation/latest/ApplicationSecret"
+
 # Job queue sized to HikariCP connection pool
 post.repository {
   executor = "thread-pool-executor"
