--- a/conf/application.conf
+++ b/conf/application.conf
@@ -27,7 +27,7 @@ play.http.filters = play.api.http.NoHttpFilters
 play.http.secret.key="http://playframework.com/documentation/latest/ApplicationSecret"
 
 # Job queue sized to HikariCP connection pool
-post.repository {
+ticket.repository {
   executor = "thread-pool-executor"
   throughput = 1
   thread-pool-executor {
