CORS and repository lookup reintroduced

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -22,7 +22,8 @@ db.default {
 }
 
 # disable the built in filters
-play.http.filters = play.api.http.NoHttpFilters
+# play.http.filters = play.api.http.NoHttpFilters
+play.filters.enabled += "play.filters.cors.CORSFilter"
 
 play.http.secret.key="http://playframework.com/documentation/latest/ApplicationSecret"
 
